Fix the installation path of wmndrc.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,5 +3,6 @@ SUBDIRS = src
 
 # extra distribution files
 man_MANS = doc/wmnd.1
-data_DATA = examples/wmndrc
+examplesdir = $(docdir)/examples
+dist_examples_DATA = examples/wmndrc
 EXTRA_DIST = $(man_MANS) $(data_DATA) ChangeLog.0
