Remove my old address from the sources.

--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,8 @@
 # process this file with autoconf >= 2.5 to produce a configure script.
-# report bugs and comments to wavexx@users.sf.net
+# report bugs and comments to wavexx@thregr.org
 
 # initialization
-AC_INIT(wmnd, 0.4.17, wavexx@users.sf.net)
+AC_INIT(wmnd, 0.4.17, wavexx@thregr.org)
 AC_CONFIG_SRCDIR(src/wmnd.c)
 AC_CANONICAL_TARGET
 AM_INIT_AUTOMAKE([foreign])
